--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">MDP-Group25</string>
+    <string name="set_start_point">Set Start Point</string>
+    <string name="set_way_point">Set Way Point</string>
+    <string name="reset_map">Reset Map</string>
+    <string name="explore">Explore</string>
+    <string name="fastest">Fastest</string>
+
 </resources>
