shorten app_name because it is too long and got truncated in bluetooth device activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MDP-Group25</string>
+    <string name="app_name">MDP-25</string>
     <string name="set_start_point">Set Start Point</string>
     <string name="set_way_point">Set Way Point</string>
     <string name="reset_map">Reset Map</string>
